# embeddedSystems

./: .gitmodules  CMakeLists.txt  README.md
LutfiPicoServer/: CMakeLists.txt  http_server_driver.c  index_html.h  lwipopts.h  main.c  mik_main.c  mqtt_driver.c  mqtt_driver.h  pico3_driver.c  pico3_driver.h  sd_driver.c  sd_driver.h  secrets.h  server_driver.c  server_driver.h  timestamp_driver.c  timestamp_driver.h  webserver.c  webserver.h
MQ-7/: CMakeLists.txt  MQ7Functions.c  MQ7Functions.h  main.c
MikPico1/: CMakeLists.txt  Pico_Webserver.c  acd1100.c  acd1100.h  html.txt  index.html  lwipopts.h  secrets.h
Pico1/: CMakeLists.txt  README.md  acd1100.h  main.c  mq135_driver.c  mq135_driver.h  mq2_driver.c  mq2_driver.h  mq7_driver.c  mq7_driver.h  mqtt_driver.c  mqtt_driver.h  pred_driver.c  secrets.h
Pico2/: CMakeLists.txt  README.md  acd1100.c  acd1100.h  ema_filter.c  ema_filter.h  lwipopts.h  main.c  mqtt_driver.c  mqtt_driver.h  power_manager.c  power_manager.h  secrets.h  wifi_driver.c
Pico3/: README.md  http_server_driver.c  hw_config.c  index.html  lwipopts.h  mqtt_driver.c  pico3_driver.c  secrets.h  timestamp_driver.c  wifi_driver.c
Pico4/: CMakeLists.txt  README.md  main.c  ml_inference.cpp  ml_inference.h  mltrainer.py  model_data.cc  mqtt_driver.c  secrets.h
builds/: Pico1.uf2  Pico2.uf2  Pico3.uf2  Pico4.uf2
demo/: CMakeLists.txt  functions.c
demoMQ2/: CMakeLists.txt  main.c  mq2_driver.c  mq2_driver.h
demoMQTT/: CMakeLists.txt  main.c  mqtt_driver.h  secrets.h  wifi_driver.h
demoSD/: CMakeLists.txt  functions.h  main.c  sd_driver.h
demoWiFi/: CMakeLists.txt  main.c  secrets.h
lab1/: CMakeLists.txt  main.c
lab2/: CMakeLists.txt  functions.c  functions.h  main.c
lab3/: CMakeLists.txt  functions.c  functions.h  main.c  template_main.c
lab4/: CMakeLists.txt  adc_log.txt  functions.c  functions.h  main.c
lab6/: CMakeLists.txt  functions.c  functions.h  main.c
mq135/: CMakeLists.txt
mq135/src/: main.c  mq135_driver.c  mq135_driver.h
pico1/: CMakeLists.txt  README.md  main.c  mq135_driver.c  mq2_driver.c  mq2_driver.h  mq7_driver.c  mq7_driver.h  mqtt_driver.c  pred_driver.h  secrets.h  wifi_driver.c
pico3/: CMakeLists.txt  http_server_driver.c  http_server_driver.h  main.c  mqtt_driver.h  pico3_driver.c  sd_driver.c  secrets.h  timestamp_driver.h  wifi_driver.c  wifi_driver.h
